首页轮播图悬停，顾问中心加载更多头像，首页国旗缩放

--- a/views/center_case.html
+++ b/views/center_case.html
@@ -203,7 +203,7 @@
             }
             aItemHtml += '<div class="case-list-item article-list-item"><div class="art-box clearfix" >'+
                         '<a target="_blank" href="' +fn.urlgen(item.uid.toString()) +'">'+
-                        '<div class="adviser-head" style="background:url(' + fn.avaterimg(item.uid, "small",item.user_info.status,item.user_info.version)+') no-repeat 0 0;background-size: 50px 50px;">'+
+                        '<div class="adviser-head" style="background:url(' + fn.avaterimg(item.uid, "small",item.user_info.status,item.user_info.version)+') no-repeat 0 0;background-size: cover;">'+
                         '</div>'+
                         '</a>'+
                         '<div class="adviser-info" >'+
