--- a/views/index.html
+++ b/views/index.html
@@ -100,7 +100,7 @@
   <div class="liuxue-guojia-title">
     点击选择留学目的地
   </div>
-  <div class="nationality_guoqi">
+  <div class="nationality_guoqi" style="min-width: 1112px;overflow: hidden">
     <div class="liuxue-guoqi">
       <!--<a class="active1" href="#country1"><img src="{{helper.cdnhost}}/assets/img/America.png" alt="美国留学"><p>美国</p></a>  -->
       <a  href="#country1"><div class="guoqi_ios guoqi_ios1"></div><p>美国</p></a>
