--- a/views/widget/xSlider/cSlider.html
+++ b/views/widget/xSlider/cSlider.html
@@ -32,13 +32,13 @@
 	    	mySwiper.swipeNext()
 	  	})
 
-      	$(".branch-expert-lunbo").on("mouseover",function(){
-      		$(".arrow-btn").show();
-      		mySwiper.stopAutoplay(); //暂停自动滚动
-      	})
- 	  	$(".branch-expert-lunbo").on("mouseout",function(){
- 	  		$(".arrow-btn").hide();
- 	  		mySwiper.startAutoplay(); //开始自动滚动
- 	  	})
+//      	$(".branch-expert-lunbo").on("mouseover",function(){
+//      		$(".arrow-btn").show();
+//      		mySwiper.stopAutoplay(); //暂停自动滚动
+//      	})
+// 	  	$(".branch-expert-lunbo").on("mouseout",function(){
+// 	  		$(".arrow-btn").hide();
+// 	  		mySwiper.startAutoplay(); //开始自动滚动
+// 	  	})
 	</script>
 {% endmacro %}
