--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -99,13 +99,15 @@
     font-size: 0;
 }
 .liuxue-guoqi p{
+    width: 54px;
+    height: 18px;
+    overflow: hidden;
     color:#333 ;
     font-size: 12px;
     text-align: center;
     /*margin-top: 5px;*/
 }
 .liuxue-guoqi a{
-    /*width: 54px;*/
     margin: 5px 40px 0px 0;
     height:60px;
     position: relative;
