--- a/views/widget/xSlider/cSlider.html
+++ b/views/widget/xSlider/cSlider.html
@@ -19,6 +19,7 @@
 		var mySwiper = new Swiper('.swiper-container',{
 			autoplay : 4000,
 				loop : true,
+        speed:1000,
         mode : 'vertical',
         slidesPerView : 2,
         slidesPerGroup : 2,
