--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -99,9 +99,9 @@
     font-size: 0;
 }
 .liuxue-guoqi p{
-    width: 54px;
-    height: 18px;
-    overflow: hidden;
+    /*width: 54px;*/
+    /*height: 18px;*/
+    /*overflow: hidden;*/
     color:#333 ;
     font-size: 12px;
     text-align: center;
