--- a/views/center_collection.html
+++ b/views/center_collection.html
@@ -235,7 +235,7 @@
             var aItemHtml = '';
             aItemHtml += '<div class="art-box clearfix" >'+
                         '<a target="_blank" href="' +fn.urlgen(item.uid.toString()) +'">'+
-                        '<div class="adviser-head" style="background:url(' + fn.avaterimg(item.uid, "small",item.user_info.status,item.user_info.version)+') no-repeat 0 0;background-size: 50px 50px;">'+
+                        '<div class="adviser-head" style="background:url(' + fn.avaterimg(item.uid, "small",item.user_info.status,item.user_info.version)+') no-repeat 0 0;background-size: cover">'+
                         '</div>'+
                         '</a>'+
                         '<div class="adviser-info" >'+
