所有评论按钮点击跳转到详情页定位到评论框位置

--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -237,7 +237,7 @@
           '<span id="shoucang_span_'+item.id+'">收藏<em id="shoucang_em_'+ item.id +'">'+ item.favorites +'</em></span>'+
           '</li>'+
           '<li onclick="showbottom(3, '+item.id+')" id="pinglun_li_'+item.id+'">'+
-          '<a target="_blank" href="' + fn.urlgen("article", item.id.toString()) + '">'+
+          '<a target="_blank" href="' + fn.urlgen("article", item.id.toString()) + '#cmt">'+
           '<li onclick="" id="pinglun_li_'+item.id+'">'+
           '<i class="iconfont " id="pinglun_'+item.id+'" style="color: #666">&#xe61f;</i>'+
           '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+item.id+'">'+item.comments+'</em></span>'+
