--- a/views/center_collection.html
+++ b/views/center_collection.html
@@ -319,14 +319,14 @@
         '<span id="shoucang_span_' + item.id + '">收藏<em id="shoucang_em_' + item.id + '">' + item.favorites + '</em></span>' +
         '</li>' ;
         if (item.type == 2){
-        html += '<a target="_blank" href="' + fn.urlgen("article", item.id.toString()) + '">'+
+        html += '<a target="_blank" href="' + fn.urlgen("article", item.id.toString()) + '#cmt">'+
         '<li onclick="" id="pinglun_li_'+item.id+'">'+
         '<i class="iconfont " id="pinglun_'+item.id+'" style="color: #666">&#xe61f;</i>'+
         '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+item.id+'">'+item.comments+'</em></span>'+
         '</li>'+
         '</a>';
         } else {
-        html += '<a target="_blank" href="' + fn.urlgen("case", item.id.toString()) + '">'+
+        html += '<a target="_blank" href="' + fn.urlgen("case", item.id.toString()) + '#cmt">'+
         '<li onclick="" id="pinglun_li_'+item.id+'">'+
         '<i class="iconfont " id="pinglun_'+item.id+'" style="color: #666">&#xe61f;</i>'+
         '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+item.id+'">'+item.comments+'</em></span>'+
