--- a/views/adviser_hot.html
+++ b/views/adviser_hot.html
@@ -10,7 +10,7 @@
 {% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
-{{ common_nav.common_nav(tdk,helper) }}}
+{{ common_nav.common_nav(tdk,helper) }}
 <div class="dui-layout-lg clearfix banner-box">
   <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
   <div class="dui-layout-div"></div>
