--- a/views/error.html
+++ b/views/error.html
@@ -17,7 +17,7 @@
 <p class="error-btn">
     <a  href="javascript:history.go(-1);" class="dui-btn btn-xlarge btn-appointment go-back-btn liuxue-back-btn">返回上页</a>
 </p>
-<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/nav_liuxue_search.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 <script>
     $('.liuxue-back-btn').on('click',function(e) {
