--- a/views/counsellor_personal.html
+++ b/views/counsellor_personal.html
@@ -3,11 +3,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title></title>
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widgettop.css" >
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_sec.css" >
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget2/side_menu.css"/>
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget2community_advisor.css"/>
-
+  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/top.css" >
   {% include "header_new.html" %}
   <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
