--- a/views/center_case.html
+++ b/views/center_case.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 {% include "header_new.html" %}
+    <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget2/bottom_comment.css" >
 <style>
     .right-cont{
         width: 878px;
