--- a/views/about/activity.html
+++ b/views/about/activity.html
@@ -159,7 +159,7 @@
         {% for item in activitylist.list %}
           {% if loop.index%2==1 %}
         <div class="new-activity-item">
-          <h2 class="new-activity-item-title"><span class="city-name">【{{item.hold_city | getCity}}】</span><a target="_blank"
+          <h2 class="new-activity-item-title"  style="font-weight: normal;"><span class="city-name">【{{item.hold_city | getCity}}】</span><a target="_blank"
             href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.country | getCountry }}-{{item.title | ellipsis(18)}}</a><span  class="activity-time">{{ item.inputtime | getDefaultFormat }}</span></h2>
           <div class="new-activity-item-con">
             <p class="description"><span>{{item.description | ellipsis(27)}}</span><a target="_blank" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">【查看详情】</a></p>
@@ -174,7 +174,7 @@
         {% else %}
 
         <div class="new-activity-item" style="margin-left: 20px">
-          <h2 class="new-activity-item-title"><span class="city-name">【{{item.hold_city | getCity}}】</span><a target="_blank"
+          <h2 class="new-activity-item-title"  style="font-weight: normal;"><span class="city-name">【{{item.hold_city | getCity}}】</span><a target="_blank"
             href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.country | getCountry }}-{{item.title | ellipsis(18)}}</a><span  class="activity-time">{{ item.inputtime | getDefaultFormat }}</span></h2>
           <div class="new-activity-item-con">
             <p class="description"><span>{{item.description | ellipsis(27)}}</span><a target="_blank" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">【查看详情】</a></p>
@@ -201,21 +201,21 @@
         {% if loop.index<=6 %}
         {% if loop.index%2==1 %}
         <div class="new-activity-item new-activity-qita">
-          <h2><a target="_blank" class="know" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span><a target="_blank"  class="know-title" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.country | getCountry }}-{{item.title | ellipsis(10)}}</a><i>最新</i></h2>
+          <h2  style="font-weight: normal;"><a target="_blank" class="know" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span><a target="_blank"  class="know-title" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.country | getCountry }}-{{item.title | ellipsis(10)}}</a><i>最新</i></h2>
         </div>
         {% else %}
         <div class="new-activity-item new-activity-qita" style="margin-left: 20px;">
-          <h2><a target="_blank" class="know" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span><a target="_blank" class="know-title" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.country | getCountry }}-{{item.title | ellipsis(10)}}</a><i>最新</i></h2>
+          <h2  style="font-weight: normal;"><a target="_blank" class="know" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span><a target="_blank" class="know-title" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.country | getCountry }}-{{item.title | ellipsis(10)}}</a><i>最新</i></h2>
         </div>
         {% endif %}
         {% else %}
         {% if loop.index%2==1 %}
         <div class="new-activity-item new-activity-qita">
-          <h2><a target="_blank" class="know" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span><a target="_blank" class="know-title" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.country | getCountry }}-{{item.title | ellipsis(12)}}</a></h2>
+          <h2  style="font-weight: normal;"><a target="_blank" class="know" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span><a target="_blank" class="know-title" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.country | getCountry }}-{{item.title | ellipsis(12)}}</a></h2>
         </div>
         {% else %}
         <div class="new-activity-item new-activity-qita" style="margin-left: 20px;">
-          <h2><a target="_blank" class="know" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span><a target="_blank" class="know-title" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.country | getCountry }}-{{item.title | ellipsis(12)}}</a></h2>
+          <h2  style="font-weight: normal;"><a target="_blank" class="know" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span><a target="_blank" class="know-title" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.country | getCountry }}-{{item.title | ellipsis(12)}}</a></h2>
         </div>
         {% endif %}
         {% endif %}
