--- a/views/header_new.html
+++ b/views/header_new.html
@@ -9,6 +9,7 @@
   <meta charset="UTF-8">
   <title>{{helper.pageTDK('title', tdk)}}</title>
   <link rel="shortcut icon" href="/favicon.ico">
+  <meta name="format-detection" content = "telephone=no">
   <meta content="{{helper.pageTDK('keywords', tdk)}}" name="keywords">
   <meta content="{{helper.pageTDK('description', tdk)}}" name="description">
   <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE">
