普通用户个人中心名片字段

--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -172,8 +172,8 @@
     </dd>
   </dl>
   <ul style="border-top: 1px solid #dcdcdc;">
-    <li class="guanzhu">关注<span class="guanzhu-num">{{ userinfo.fans_count }}</span></li>
-    <li style="width: 135px">收藏<span class="article-num">{{ userinfo.favourite_count }}</span></li>
+    <li class="guanzhu">关注<span class="guanzhu-num">{{ userinfo.guanzhu_count }}</span></li>
+    <li style="width: 135px">收藏<span class="article-num">{{ userinfo.shoucang_count}}</span></li>
   </ul>
 </div>
 <!--<div class="tou_div" style="display: none">
