修改登录页面

--- a/views/login/register.html
+++ b/views/login/register.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 {% include "header_new.html" %}
+  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/top.css"/>
+  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/bootstrap.min.css?v=3.3.6" >
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/style.css?v=4.1.0" >
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/custom.css">
