--- a/views/index.html
+++ b/views/index.html
@@ -100,6 +100,7 @@
   <div class="liuxue-guojia-title">
     点击选择留学目的地
   </div>
+  <div class="liuxue-guojia-line"></div>
   <div class="nationality_guoqi">
     <div class="liuxue-guoqi">
       <!--<a class="active1" href="#country1"><img src="{{helper.cdnhost}}/assets/img/America.png" alt="美国留学"><p>美国</p></a>  -->
