--- a/views/center_message.html
+++ b/views/center_message.html
@@ -6,6 +6,15 @@
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
   <![endif]-->
 <style>
+    .right-title div{
+        width: 115px;
+        height: 40px;
+        background: #C13232;
+        font-size: 18px;
+        color: #fff;
+        text-align: center;
+        line-height: 40px;
+    }
     .pagination-box{
         float: left;
         position: relative;
