--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -459,7 +459,10 @@
             if($('#recommend-input').val()==''){
               layer.msg('请输入您的自定义标签');
               return false;
-            }else{
+            }else if ($('#recommend-input').val() == '专业解析' || $('#recommend-input').val()=='申请规划' || $('#recommend-input').val() =='留学费用'||$('#recommend-input').val()=='留学条件'||$('#recommend-input').val()=='大学排名'||$('#recommend-input').val()=='行前指导'||$('#recommend-input').val()=='就业指导'||$('#recommend-input').val()=='签证指导'||$('#recommend-input').val()=='留学案例'){
+                layer.msg('您输入的自定义标签不能与推荐标签相同');
+                return false;
+              }else{
               custom_tags =$('#recommend-input').val();
             }
           }
@@ -574,7 +577,10 @@
             if($('#recommend-input').val()==''){
               layer.msg('请输入您的自定义标签');
               return false;
-            }else{
+            }else if ($('#recommend-input').val() == '专业解析' || $('#recommend-input').val()=='申请规划' || $('#recommend-input').val() =='留学费用'||$('#recommend-input').val()=='留学条件'||$('#recommend-input').val()=='大学排名'||$('#recommend-input').val()=='行前指导'||$('#recommend-input').val()=='就业指导'||$('#recommend-input').val()=='签证指导'||$('#recommend-input').val()=='留学案例'){
+                layer.msg('您输入的自定义标签不能与推荐标签相同');
+                return false;
+              }else{
               custom_tags =$('#recommend-input').val();
             }
           }
