荣发 首页h1不加粗

--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -50,7 +50,7 @@
 {% set ad_seat_index = loop.index + 10 %}
 <div class="lxContaniner" style="overflow:hidden" id="country{{floor.country_id}}">
 	<div class="lx-head">
-		<h1>{{floor.country_name}}留学</h1>
+		<h1 style="font-weight: normal">{{floor.country_name}}留学</h1>
 		<ul class="lx-tabitems" data-country_id="{{floor.country_id}}">
 			{% for tagitem in floor.list %}
 				{% if loop.index == 1 %}
