--- a/views/about/canzan.html
+++ b/views/about/canzan.html
@@ -72,12 +72,14 @@
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js" ></script>
 <script>
+  $(function(){
     $('.slider').xSlider({
-        //轮播图配置
-        current: 0,
-        speed: 500,
-        intervalTime: 5000,
-        pagination: true
+      //轮播图配置
+      current: 0,
+      speed: 500,
+      intervalTime: 5000,
+      pagination: true
     });
+  })
 </script>
 </html>
