--- a/views/about/activity_detail.html
+++ b/views/about/activity_detail.html
@@ -185,26 +185,28 @@
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
 <script>
-  $('.banner-box-left .slider').xSlider({
-    //轮播图配置
+  $(function(){
+    $('.banner-box-left .slider').xSlider({
+      //轮播图配置
 //          autoplay : 500,
-    current: 0,
-    speed: 500,
-    intervalTime: 5000,
-    pagination: true,
-    dotPostion:'right'
-  });
-  $('.banner-box-right .slider').xSlider({
-    //轮播图配置
+      current: 0,
+      speed: 500,
+      intervalTime: 5000,
+      pagination: true,
+      dotPostion:'right'
+    });
+    $('.banner-box-right .slider').xSlider({
+      //轮播图配置
 //          autoplay : 500,
 //            mode:'vertical',
-    current: 0,
-    speed: 1000,
-    intervalTime: 5000,
-    slidesPerView: 2,
-    slidesPerGroup: 2,
-    pagination: true
-  });
+      current: 0,
+      speed: 1000,
+      intervalTime: 5000,
+      slidesPerView: 2,
+      slidesPerGroup: 2,
+      pagination: true
+    });
+  })
 </script>
 </body>
 </html>
