--- a/views/header_new.html
+++ b/views/header_new.html
@@ -23,11 +23,11 @@
   <script src="{{helper.cdnhost}}/dep/js/html5.js"></script>
   <![endif]-->
   <script  src="{{helper.cdnhost}}/dep/js/jquery-11.1.js"></script>
-  <script src="{{helper.cdnhost}}/dep/js/jquery.xdomainrequest.min.js"></script>
+  <!--<script src="{{helper.cdnhost}}/dep/js/jquery.xdomainrequest.min.js"></script>-->
   <script src="{{helper.cdnhost}}/dep/js/jquery.cookie.js" ></script>
   <script src="{{helper.cdnhost}}/dep/js/dui.js"></script>
   <script src="{{helper.cdnhost}}/assets/font/iconfont.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/json2.js" ></script>
+  <!--<script src="{{helper.cdnhost}}/assets/js/json2.js" ></script>-->
   {% if helper.version == 'development' %}
   <script  src="{{helper.cdnhost}}/assets/js/common/common_dev.js"></script>
   {% elif helper.version == 'production' %}
